WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265357
[UIAsyncTextInput] fast/forms/caps-lock-indicator-width.html fails with --use-async-uikit-interactions
https://bugs.webkit.org/show_bug.cgi?id=265357
Summary
[UIAsyncTextInput] fast/forms/caps-lock-indicator-width.html fails with --use...
Wenson Hsieh
Reported
2023-11-26 12:29:14 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-26 12:29:35 PST
<
rdar://problem/118809857
>
Wenson Hsieh
Comment 2
2023-11-26 12:36:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20911
EWS
Comment 3
2023-11-27 11:35:36 PST
Committed
271157@main
(dd07b27ea919): <
https://commits.webkit.org/271157@main
> Reviewed commits have been landed. Closing PR #20911 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug