[UIAsyncTextInput] fast/forms/caps-lock-indicator-width.html fails with --use-async-uikit-interactions https://bugs.webkit.org/show_bug.cgi?id=265357 rdar://118809857

Reviewed by Megan Gardner.

Fix this failing layout test when async UIKit interactions are enabled; see below.

* Source/WebCore/platform/ios/WebEvent.mm:
(webEventModifierFlags):

Add missing logic to handle `UIKeyModifierAlphaShift` (i.e. caps lock state) by adding the
`WebEventFlagMaskLeftCapsLockKey` modifier flag.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView insertionPointColor]):
(-[WKContentView selectionBarColor]):
(-[WKContentView selectionHighlightColor]):
(-[WKContentView textContentTypeForTesting]):

Replace internal calls into the private `-textInputTraits` method here, to avoid hitting our own
release assert.

Canonical link: https://commits.webkit.org/271157@main